@@ -1250,6 +1250,13 @@ outgsd()
 		fprintf(ofp, "%s\n", ptr);
 	}
 
+        /* sdas specific */
+        /*
+         * Sdcc compile options
+         */
+        if (is_sdas() && NULL != optsdcc) fprintf(ofp, "O %s\n", optsdcc);
+        /* end sdas specific */
+
 	/*
 	 * Modes
 	 */
